--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -39,6 +39,9 @@
     <div class="row">  
         <div class="col-md-6 text-center" class="uneaten">
             <h3>Come and Get It!</h3>
+            {{#if custError}}
+                <h4 class = "nullError">{{custError}}</h4>
+            {{/if}}
             <ul> 
                 {{#each burgers}}
                 {{!-- #unless acts like "if false"...so, if devoured = false (tried !this.devoured but didn't work) --}}
@@ -46,7 +49,7 @@
                     <li >
                         <h4 class="well">{{this.burger_name}}</h4>                  
                         <form method="POST" action="/api/customer/{{this.id}}?_method=PUT" class="button-size">
-                            <label for="customer_name"></label>
+                            {{!-- <label for="customer_name"></label> --}}
                             <input type="text" class="form-control" name="customer_name" maxlength="25" placeholder="Customer Name" required>
                             <input type="hidden" name="devoured"  value="true">
                             <button type="submit" class="btn btn-danger btn-sm">Devour!</button>
